--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.0.14",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "feather": "^0.0.6",
     "firebase": "^11.4.0",
     "mui-components": "^0.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
-    "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.4.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.15",
+    "tailwindcss": "^4.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
