--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.4.0",
     "mui-components": "^0.3.1",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
